Fixed a warning about Mockito wit Cursor