@@ -130,6 +130,37 @@
 				<artifactId>git-commit-id-plugin</artifactId>
 				<version>4.9.10</version>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-dependency-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>copy-mockito-agent</id>
+						<phase>process-test-classes</phase>
+						<goals>
+							<goal>copy</goal>
+						</goals>
+						<configuration>
+							<artifactItems>
+								<artifactItem>
+									<groupId>org.mockito</groupId>
+									<artifactId>mockito-core</artifactId>
+									<version>${mockito.version}</version>
+									<outputDirectory>${project.build.directory}/test-agents</outputDirectory>
+									<destFileName>mockito-core.jar</destFileName>
+								</artifactItem>
+							</artifactItems>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<argLine>-XX:+EnableDynamicAgentLoading -javaagent:"${project.build.directory}/test-agents/mockito-core.jar"</argLine>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
